# ilab-gpt-conjure

./: .public-export-manifest.json  README.en.md  README.md  README.zh-CN.md  RELEASES.md  SECURITY.md
.github/workflows/: release-portable.yml
codex_image/: version.py
codex_image/webui/: app_version.py  executor_inputs.py  settings_store.py
codex_image/webui/frontend/src/: api-provider-settings.ts  api-settings.ts  app-version.ts  auth-source.ts  boot.ts  bootstrap.ts  elements.ts  event-bindings.ts  history.ts  i18n.ts  state-defaults.ts  system-settings.ts  task-batch-controls.ts  task-list-render.ts  (+1 more)
codex_image/webui/routes/: settings.py
codex_image/webui/static/: app.js  app.js.map  history.html  history.js  history.js.map  index.html  styles.css
launcher/: Cargo.toml  README.md  build.rs
launcher/assets/: update-signing-public-key.b64
launcher/src/: lib.rs  main.rs
packaging/macos/: README-app.md  README-portable.md  Start WebUI Portable.command  Update WebUI Portable.command  build-app.sh  build-portable.sh  standard_webui_app.py
packaging/windows/: README-app.md  README-portable.md  Update WebUI Portable.bat  Update WebUI Portable.ps1  build-app.ps1  build-portable.ps1  standard_webui_app.py
scripts/: build-update-manifest.py
tests/: test_portable_packaging.py  test_tray_launcher_static.py  test_update_manifest.py  test_webui_executor_inputs.py  test_webui_refactor_contract.py  test_webui_settings.py  test_webui_static_history.py  test_webui_static_i18n.py  test_webui_static_layout.py  test_webui_static_prompt.py  test_webui_static_tasks.py
(+17 files in other folders)
