[package]
name = "ilab-conjure-launcher"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
description = "System tray launcher for iLab GPT CONJURE."
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
ed25519-dalek = "2.1"
open = "5.3.6"
serde_json = "1.0"
tray-icon = "0.24.1"
winit = "0.30"

[target.'cfg(windows)'.build-dependencies]
winresource = { version = "0.1.31", default-features = false }
